вопросы хранятся в questions.txt, исправлены недочеты